SubBt/force-app/main/default/objects/Quote_Item__c/Quote_Item__c.object-meta.xml
<CustomObject>
    <label>BT Quote Line</label>
    <nameField>
        <label>Product Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>