SubBt/force-app/main/default/objects/Quote_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Quote Item Description</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>