SubBt/force-app/main/default/objects/Quote_Item__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>/*(  buildertek__List_Total__c  - buildertek__Net_Total_Price__c)/  buildertek__List_Total__c*/

1-(Net_Unit__c/Unit_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount From List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>