SubBt/force-app/main/default/objects/Quote_Item__c/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the groupings you will use to manage your Bill of Materials.</description>
    <inlineHelpText>This is the groupings you will use to manage your Bill of Materials.</inlineHelpText>
    <label>Phase</label>
    <referenceTo>Quote_Line_Group__c</referenceTo>
    <relationshipName>BT_Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>