SubBt/force-app/main/default/objects/Quote_Item__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description>Quote item name</description>
    <inlineHelpText>Quote item name</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>