SubBt/force-app/main/default/objects/Quote_Item__c/fields/List_Total__c.field-meta.xml
<CustomField>
    <fullName>List_Total__c</fullName>
    <description>List Unit Price * Quantity</description>
    <formula>Unit_Price__c  *   Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>List Unit Price * Quantity</inlineHelpText>
    <label>List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>