SubBt/force-app/main/default/objects/Quote_Item__c/fields/List_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Unit_Price__c</fullName>
    <description>Same as Net Unit Price</description>
    <formula>Unit_Price__c   + ( Unit_Price__c  *   Markup__c ) - ( Unit_Price__c  *    Additional_Discount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Cost * Markup Amount</inlineHelpText>
    <label>List Unit Price (DEP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>