SubBt/force-app/main/default/objects/Quote_Item__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <description>This is the % Markup at the Line Level.  This Markup % will override the Applied Markup %.</description>
    <inlineHelpText>This is the % Markup at the Line Level.  This Markup % will override the Applied Markup %.</inlineHelpText>
    <label>Markup (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>