SubBt/force-app/main/default/objects/Quote_Item__c/fields/Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Markup_Amount__c</fullName>
    <formula>Total_Cost__c *  Markup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>