SubBt/force-app/main/default/objects/Quote_Item__c/fields/MFG_Discount__c.field-meta.xml
<CustomField>
    <fullName>MFG_Discount__c</fullName>
    <formula>((Unit_Price__c -  Unit_Cost__c ) /  Unit_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFG Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>