SubBt/force-app/main/default/objects/Quote_Item__c/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <description>Same as Total Cost</description>
    <formula>Unit_Cost__c  *   Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity * Unit Cost</inlineHelpText>
    <label>Net Total Cost (Dep)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>