SubBt/force-app/main/default/objects/Quote_Item__c/fields/Net_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Price__c</fullName>
    <formula>/*( buildertek__Net_Unit__c *  buildertek__Quantity__c) +  buildertek__Tax_Amount__c -  buildertek__Additional_Discount__c BC - 11/19/22 */
Total_Cost__c  +   Markup_Amount__c + Tax_Amount__c -  Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SubTotal + Discount, Markup and Taxes.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>