SubBt/force-app/main/default/objects/Quote_Item__c/fields/Net_Unit__c.field-meta.xml
<CustomField>
    <fullName>Net_Unit__c</fullName>
    <formula>Unit_Cost__c  + (  Unit_Cost__c  *  Markup__c ) - (  Unit_Cost__c  *   Additional_Discount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Cost multiplied by Markup or Discount</inlineHelpText>
    <label>Unit Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>