SubBt/force-app/main/default/objects/Quote_Item__c/fields/Not_Customer_Visible__c.field-meta.xml
<CustomField>
    <fullName>Not_Customer_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if you do not want this Quote line to be visible to your customer.  It will still be included in the Quote amounts.</inlineHelpText>
    <label>Not Customer Visible</label>
    <type>Checkbox</type>
</CustomField>