SubBt/force-app/main/default/objects/Quote_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Product you will be selling your customers</description>
    <inlineHelpText>This is the Product you will be selling your customers.</inlineHelpText>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>