SubBt/force-app/main/default/objects/Quote_Item__c/fields/Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Profit_Margin__c</fullName>
    <formula>/*(( buildertek__Net_Unit__c -  buildertek__Unit_Cost__c )/buildertek__Net_Unit__c)*/

(( Net_Total_Price__c -  Total_Cost__c )/Net_Total_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>