SubBt/force-app/main/default/objects/Quote_Item__c/fields/Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Group</label>
    <referenceTo>Quote_Line_Sub_Group__c</referenceTo>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>