SubBt/force-app/main/default/objects/Quote_Item__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Quantity * Unit Cost</description>
    <formula>Quantity__c  *  Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity * Unit Cost</inlineHelpText>
    <label>SubTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>