SubBt/force-app/main/default/objects/Quote_Item__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <description>Cost Per Unit from Manufacturer</description>
    <inlineHelpText>Cost Per Unit from Manufacturer</inlineHelpText>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>