SubBt/force-app/main/default/objects/Quote_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Quote Item Unit Price</description>
    <inlineHelpText>Customer Sales Price per Unit</inlineHelpText>
    <label>List Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>