SubBt/force-app/main/default/objects/Quote_Item__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BT_Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>