SubBt/force-app/main/default/objects/Quote_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Net_Total__c</columns>
    <columns>List_Total__c</columns>
    <columns>MFG_Discount__c</columns>
    <columns>Markup__c</columns>
    <columns>Net_Unit__c</columns>
    <columns>Net_Total_Price__c</columns>
    <columns>Profit_Margin__c</columns>
    <columns>Discount__c</columns>
    <columns>Additional_Discount__c</columns>
    <columns>Gross_Profit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>